WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217416
Web Inspector: REGRESSION(
r265231
): Overlay: node info sometimes draws on one line
https://bugs.webkit.org/show_bug.cgi?id=217416
Summary
Web Inspector: REGRESSION(r265231): Overlay: node info sometimes draws on one...
Devin Rousso
Reported
2020-10-06 17:30:00 PDT
Created
attachment 410717
[details]
[Image] screenshot of issue # STEPS TO REPRODUCE 1. inspect <
https://devinrousso.com/share
> 2. delete all child nodes of the `<head>` and `<body>` (i.e. make the page look like `about:blank` but without actually navigating to it) 3. add the following to the `<body>`: ``` <img src="
https://devinrousso.com/projects/Dots/Dots.png
"> ``` 4. hover over the node added in step (3) in the Elements Tab # EXPECTED the node info should show +-------------------+ | img 200px × 200px | | Role img | +-------------------+ # ACTUAL the node info incorrectly show +-------------------+ | img 200px × 200px Role img | | +-------------------+ (with the "R" overlapping the right border)
Attachments
[Image] screenshot of issue
(23.63 KB, image/png)
2020-10-06 17:30 PDT
,
Devin Rousso
no flags
Details
Patch
(1.57 KB, patch)
2020-10-19 09:35 PDT
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
As patched in attachment 411751
(341.34 KB, image/png)
2020-10-19 09:39 PDT
,
Patrick Angle
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-10-06 17:30:24 PDT
<
rdar://problem/70025282
>
Patrick Angle
Comment 2
2020-10-19 09:35:19 PDT
Created
attachment 411751
[details]
Patch
Patrick Angle
Comment 3
2020-10-19 09:39:08 PDT
Created
attachment 411752
[details]
As patched in
attachment 411751
[details]
Blaze Burg
Comment 4
2020-10-19 10:28:01 PDT
Comment on
attachment 411751
[details]
Patch r=me
EWS
Comment 5
2020-10-19 12:04:18 PDT
Committed
r268680
: <
https://trac.webkit.org/changeset/268680
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 411751
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug