Web Inspector: REGRESSION(r265231): Overlay: node info sometimes draws on one line https://bugs.webkit.org/show_bug.cgi?id=217416

Patch by Patrick Angle <pangle@apple.com> on 2020-10-19
Reviewed by Brian Burg.

No new tests - user interface fix.

Restored advancing to the next line for drawing two-line element titles (for elements with a Role).

* inspector/InspectorOverlay.cpp:
(WebCore::InspectorOverlay::drawElementTitle):

Canonical link: https://commits.webkit.org/230634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268680 268f45cc-cd09-0410-ab3c-d52691b4dbfc